Add login detection at Homepage and change login button style

--- a/client/src/styles/ButtonStyles.css
+++ b/client/src/styles/ButtonStyles.css
@@ -1,29 +1,39 @@
 .logout-button {
-    display: block;
-    width: 180px;
-    margin: 30px auto;
-    padding: 12px 20px;
-    font-size: 18px;
-    background-color: #e74c3c;
-    color: white;
-    text-align: center;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-  }
-  
-  .logout-button::after {
-    content: ' →';
-    font-size: 20px;
-    margin-left: 8px;
-  }
-  
-  .logout-button:hover {
-    background-color: #c0392b;
-    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
-  }
+  position: fixed;
+  transform: translateX(-50%);
+  left: 50%;
+  bottom: 20px;
+
+  margin: 30px auto;
+  font-size: 18px;
+  background-color: #e74c3c;
+  text-align: center;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  color: white;
+  cursor: pointer;
+  box-sizing: border-box;
+
+  border: 2px solid black;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  width: 180px;
+  padding: 12px 20px;
+
+  /* Centering Text */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.logout-button::after {
+  content: ' →';
+  font-size: 20px;
+  margin-left: 8px;
+}
+
+.logout-button:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  background-color: #c0392b;
+}
