--- a/client/src/styles/Background.css
+++ b/client/src/styles/Background.css
@@ -11,7 +11,7 @@ body {
     z-index: -100;
     opacity: 0.6;
 
-    background-image: url("../../public/background-1.png");
+    background-image: url("../../public/images/background-1.png");
     background-repeat: no-repeat;
     background-size: cover;
     
