--- a/client/src/styles/Global.css
+++ b/client/src/styles/Global.css
@@ -3,3 +3,28 @@
     margin: 0;
     padding: 0;
 }
+
+input {
+    background-color: #22222255;
+    outline: none;
+    padding: 10px 5px;
+    border: none;
+}
+
+button {
+    padding: 10px 15px;
+    cursor: pointer;
+    background-color: #22aa00;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #228800;
+}
+
+select {
+    background-color: #22222255;
+    border: none;
+    padding: 5px;
+}
