--- a/client/src/styles/ReactCalendar.css
+++ b/client/src/styles/ReactCalendar.css
@@ -1,18 +1,50 @@
-.react-calendar {
-    width: 300px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
+  background-image: linear-gradient(to bottom right, #0e2d8b, #085757);
+}
+
+.rbc-calendar {
+  width: 90vw;
+  height: 90vh;
   
-  .react-calendar__tile {
-    background-color: #f8f8f8;
-    border-radius: 4px;
-    padding: 8px;
-  }
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #222;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
   
-  .react-calendar__tile--active {
-    background-color: #4CAF50;
-    color: white;
-  }
+.rbc-calendar__tile {
+  background-color: #f8f8f8;
+  border-radius: 4px;
+  padding: 8px;
+}
+
+.rbc-calendar__tile--active {
+  background-color: #4CAF50;
+  color: red;
+}
+
+.rbc-timeslot-group {
+  margin-top: 2px;
+}
+
+.rbc-timeslot-group > .rbc-time-slot {
+  border: none;
+}
+
+.rbc-calendar .rbc-btn-group * {
+  color: #eee;
+}
+
+.rbc-calendar .rbc-btn-group *.rbc-active {
+  color: #222;
+}
+
+.homepage-button {
+  z-index: 1000;
+}
