--- a/client/src/styles/DataForm.css
+++ b/client/src/styles/DataForm.css
@@ -38,4 +38,6 @@ form.user-info-form > .input-field-container > * {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+
+    width: 100%;
 }
