--- a/client/src/styles/DataForm.css
+++ b/client/src/styles/DataForm.css
@@ -138,7 +138,7 @@ form.user-info-form > .input-field-container > * {
 
 /* Round Edit Button */
 .edit-button {
-    background: #007bff;
+    background: rgba(0, 123, 255, 0.8);;
     color: white;
     width: 60px;  
     height: 60px;
